Nova funcionalidade adicionada

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Curso de GIT</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+            <li><a href=""></a></li>
+        </ul>
+    </header>
 </body>
 </html>
